--- a/package.json
+++ b/package.json
@@ -2,11 +2,43 @@
   "name": "home-cams",
   "version": "0.1.0",
   "private": true,
+  "dependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
   "scripts": {
-    "dev": "node bin/proxy.js",
-    "start": "npm run dev"
+    "dev": "craco start",
+    "start": "npm run dev",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
 	"devDependencies": {
-		"anyproxy": "^4.1.3"
-	}
+		"anyproxy": "^4.1.3",
+    "@craco/craco": "^7.1.0"
+	},
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
