基本功能ok，接下来调试健壮性和增加异常情况处理

--- a/config.json
+++ b/config.json
@@ -1,5 +1,8 @@
 {
-  "block_hosts": ["baidu.com", "bilibili.com"],
+  "block_hosts": [
+    "baidu.com",
+    "bilibili.com"
+  ],
   "proxy_port": 8001,
   "web_interface_port": 8002
 }
