--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "home-cams",
+  "name": "block-proxy",
   "version": "0.1.0",
   "private": true,
+  "description": "Small-scale network proxy filter",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -12,10 +13,16 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jayli/block-proxy.git"
+  },
   "scripts": {
     "dev": "craco start",
     "start": "npm run dev",
     "build": "react-scripts build",
+    "docker:build": "docker build -t block-proxy .",
+    "docker:build_arm": "docker buildx build --platform linux/arm64/v8 -t block-proxy .",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
