--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
   "block_hosts": [
     "baidu.com",
-    "bilibili.com"
+    "bilibili.com",
+    "aaa.com",
+    "bbb.com"
   ],
   "proxy_port": 8001,
   "web_interface_port": 8002
