--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/jayli/block-proxy.git"
   },
   "scripts": {
-    "dev": "craco start",
+    "dev": "cp ./hack-of-anyproxy/lib/requestHandler.js ./node_modules/anyproxy/lib/ && craco start",
     "start": "npm run dev",
     "build": "react-scripts build",
     "docker:build": "docker build -t block-proxy .",
@@ -26,10 +26,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-	"devDependencies": {
-		"anyproxy": "^4.1.3",
+  "devDependencies": {
+    "anyproxy": "^4.1.3",
     "@craco/craco": "^7.1.0"
-	},
+  },
   "eslintConfig": {
     "extends": [
       "react-app"
