--- a/config.json
+++ b/config.json
@@ -1,7 +1,25 @@
 {
   "block_hosts": [
-    "baidu.com",
-    "bilibili.com"
+    {
+      "filter_host": "baidu.com",
+      "filter_start_time": "10:00",
+      "filter_end_time": "20:00"
+    },
+    {
+      "filter_host": "bilibili.com",
+      "filter_start_time": "09:00",
+      "filter_end_time": "18:00"
+    },
+    {
+      "filter_host": "xxxxx",
+      "filter_start_time": "10:00",
+      "filter_end_time": "18:00"
+    },
+    {
+      "filter_host": "xcvxcvcxv",
+      "filter_start_time": "09:08",
+      "filter_end_time": "22:00"
+    }
   ],
   "proxy_port": 8001,
   "web_interface_port": 8002
