--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
       "filter_host": "baidu.com",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
+      "filter_mac":"",
       "filter_weekday": [
         1,
         2,
@@ -16,6 +17,7 @@
       "filter_host": "bilibili.com",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
+      "filter_mac":"",
       "filter_weekday": [
         1,
         2,
@@ -26,5 +28,67 @@
     }
   ],
   "proxy_port": 8001,
-  "web_interface_port": 8002
+  "web_interface_port": 8002,
+  "devices": [
+    {
+      "ip": "192.168.124.1",
+      "mac": "66:65:A3:5A:D7:8C"
+    },
+    {
+      "ip": "192.168.124.2",
+      "mac": "7C:DE:78:A9:83:A0"
+    },
+    {
+      "ip": "192.168.124.3",
+      "mac": "0:DD:B6:EA:E6:2A"
+    },
+    {
+      "ip": "192.168.124.6",
+      "mac": "0:DD:B6:EB:26:5C"
+    },
+    {
+      "ip": "192.168.124.20",
+      "mac": "DC:97:58:D:FD:9F"
+    },
+    {
+      "ip": "192.168.124.36",
+      "mac": "DE:1E:87:ED:17:8B"
+    },
+    {
+      "ip": "192.168.124.55",
+      "mac": "E2:4D:6E:1:21:6E"
+    },
+    {
+      "ip": "192.168.124.99",
+      "mac": "8E:29:87:27:DE:40"
+    },
+    {
+      "ip": "192.168.124.111",
+      "mac": "74:3F:C2:67:74:98"
+    },
+    {
+      "ip": "192.168.124.117",
+      "mac": "48:F3:F3:CA:1D:E"
+    },
+    {
+      "ip": "192.168.124.118",
+      "mac": "D2:9E:8D:1B:F1:4E"
+    },
+    {
+      "ip": "192.168.124.147",
+      "mac": "46:44:38:60:23:5A"
+    },
+    {
+      "ip": "192.168.124.200",
+      "mac": "54:52:84:95:DF:5E"
+    },
+    {
+      "ip": "192.168.124.229",
+      "mac": "D6:A0:61:69:67:F6"
+    },
+    {
+      "ip": "192.168.124.240",
+      "mac": "F4:6B:8C:90:29:5"
+    }
+  ]
 }
