--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "anyproxy": "^4.1.3",
-    "@craco/craco": "^7.1.0"
+    "ping": "^1.0.0"
   },
   "browserslist": {
     "production": [
