--- a/config.json
+++ b/config.json
@@ -31,6 +31,21 @@
         6,
         7
       ]
+    },
+    {
+      "filter_host": "aaa.com",
+      "filter_pathname": "/a/b/c/d",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ]
     }
   ],
   "proxy_port": 8001,
