--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
       "filter_pathname": "",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
-      "filter_mac": "D2:9E:8D:1B:F1:4E",
+      "filter_mac": "",
       "filter_weekday": [
         1,
         2,
@@ -18,23 +18,7 @@
     },
     {
       "filter_host": "bilibili.com",
-      "filter_pathname": "/tv/",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_mac": "F4:6B:8C:90:29:05",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "aaa.com",
-      "filter_pathname": "/a/b/c/d",
+      "filter_pathname": "",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
       "filter_weekday": [
