--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
       "filter_pathname": "",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
-      "filter_mac": "",
+      "filter_mac": "7A:25:CF:6B:59:E0",
       "filter_weekday": [
         1,
         2,
@@ -29,7 +29,40 @@
         5,
         6,
         7
-      ]
+      ],
+      "filter_mac": "7A:25:CF:6B:59:E0"
+    },
+    {
+      "filter_host": "doubao.com",
+      "filter_pathname": "",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ],
+      "filter_mac": "7A:25:CF:6B:59:E0"
+    },
+    {
+      "filter_host": "dburl.net",
+      "filter_pathname": "",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ],
+      "filter_mac": "7A:25:CF:6B:59:E0"
     }
   ],
   "proxy_port": 8001,
