--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "cp": "cp ./hack-of-anyproxy/lib/requestHandler.js ./node_modules/anyproxy/lib/",
     "dev": "npm run cp && craco start",
     "start": "npm run dev",
-    "express": "npm run build && npm run cp && node ./server/app.js",
+    "express": "npm run cp && node ./server/app.js",
     "proxy": "cp ./hack-of-anyproxy/lib/requestHandler.js ./node_modules/anyproxy/lib/ && node proxy/start.js",
     "build": "react-scripts build",
     "docker:build": "npm run build && docker build -t block-proxy .",
