--- a/config.json
+++ b/config.json
@@ -147,6 +147,154 @@
     {
       "ip": "192.168.124.227",
       "mac": "48:38:B6:46:F8:BD"
+    },
+    {
+      "ip": "30.166.210.1",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.2",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.3",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.4",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.5",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.6",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.7",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.8",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.9",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.10",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.11",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.12",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.13",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.14",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.15",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.16",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.17",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.18",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.19",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.20",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.21",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.22",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.23",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.24",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.25",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.26",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.27",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.28",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.29",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.30",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.31",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.32",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.33",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.34",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.35",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.36",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.166.210.181",
+      "mac": "6A:79:EA:F8:D1:C3"
     }
   ]
 }
