--- a/config.json
+++ b/config.json
@@ -751,6 +751,10 @@
     {
       "ip": "30.166.210.150",
       "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "192.168.124.138",
+      "mac": "D2:F5:D9:5:8D:CE"
     }
   ]
 }
