--- a/config.json
+++ b/config.json
@@ -151,6 +151,14 @@
     {
       "ip": "192.168.124.138",
       "mac": "D2:F5:D9:5:8D:CE"
+    },
+    {
+      "ip": "192.168.124.128",
+      "mac": "A:2A:29:FC:35:F0"
+    },
+    {
+      "ip": "192.168.124.204",
+      "mac": "1E:D7:B9:A4:FE:E8"
     }
   ]
 }
