--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "cp": "cp ./hack-of-anyproxy/lib/requestHandler.js ./node_modules/anyproxy/lib/",
-    "craco":"craco start",
+    "craco": "craco start",
     "dev": "BLOCK_PROXY_DEV=1 npm run express",
     "start": "npm run express",
     "express": "npm run cp && node ./server/express.js",
@@ -27,9 +27,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "anyproxy": "^4.1.3",
     "@craco/craco": "^7.1.0",
+    "anyproxy": "^4.1.3",
+    "axios": "^1.13.2",
     "express": "^5.1.0",
+    "http-proxy-agent": "^7.0.2",
+    "https-proxy-agent": "^7.0.6",
     "ping": "^1.0.0"
   },
   "browserslist": {
