--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
-  "vpn_proxy":"127.0.0.1:1087",
   "block_hosts": [
     {
       "filter_host": "baidu.com",
@@ -68,6 +67,7 @@
   ],
   "proxy_port": 8001,
   "web_interface_port": 8002,
+  "vpn_proxy": "127.0.0.1:1087",
   "devices": [
     {
       "ip": "192.168.124.1",
@@ -160,6 +160,22 @@
     {
       "ip": "192.168.124.204",
       "mac": "1E:D7:B9:A4:FE:E8"
+    },
+    {
+      "ip": "192.168.124.37",
+      "mac": "DE:1E:87:ED:17:8B"
+    },
+    {
+      "ip": "192.168.124.65",
+      "mac": "E2:AC:EB:15:83:79"
+    },
+    {
+      "ip": "192.168.124.70",
+      "mac": "B2:52:A8:BC:1D:75"
+    },
+    {
+      "ip": "192.168.124.212",
+      "mac": "D2:E9:D1:F8:CE:ED"
     }
   ]
 }
