--- a/config.json
+++ b/config.json
@@ -67,7 +67,7 @@
   ],
   "proxy_port": 8001,
   "web_interface_port": 8002,
-  "vpn_proxy": "127.0.0.1:1087",
+  "vpn_proxy": "192.168.124.240:1087",
   "devices": [
     {
       "ip": "192.168.124.1",
@@ -176,6 +176,10 @@
     {
       "ip": "192.168.124.212",
       "mac": "D2:E9:D1:F8:CE:ED"
+    },
+    {
+      "ip": "192.168.124.54",
+      "mac": "E2:4D:6E:1:21:6E"
     }
   ]
 }
