--- a/config.json
+++ b/config.json
@@ -63,6 +63,21 @@
         7
       ],
       "filter_mac": "7A:25:CF:6B:59:E0"
+    },
+    {
+      "filter_host": "baidu.com",
+      "filter_pathname": "/a/b/c/d",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ]
     }
   ],
   "proxy_port": 8001,
