--- a/config.json
+++ b/config.json
@@ -1,24 +1,8 @@
 {
   "block_hosts": [
     {
-      "filter_host": "baidu.com",
-      "filter_pathname": "",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_mac": "7A:25:CF:6B:59:E0",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
       "filter_host": "bilibili.com",
-      "filter_pathname": "",
+      "filter_match_rule": "",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
       "filter_weekday": [
@@ -34,7 +18,7 @@
     },
     {
       "filter_host": "doubao.com",
-      "filter_pathname": "",
+      "filter_match_rule": "",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
       "filter_weekday": [
@@ -50,7 +34,7 @@
     },
     {
       "filter_host": "dburl.net",
-      "filter_pathname": "",
+      "filter_match_rule": "",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
       "filter_weekday": [
@@ -65,8 +49,8 @@
       "filter_mac": "7A:25:CF:6B:59:E0"
     },
     {
-      "filter_host": "baidu.com",
-      "filter_pathname": "/a/b/c/d",
+      "filter_host": "pan.baidu.com",
+      "filter_match_rule": "^https?:\\/\\/pan\\.baidu\\.com\\/disk\\/main",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
       "filter_weekday": [
@@ -195,6 +179,14 @@
     {
       "ip": "192.168.124.54",
       "mac": "E2:4D:6E:1:21:6E"
+    },
+    {
+      "ip": "192.168.124.149",
+      "mac": "14:C0:50:14:6E:A5"
+    },
+    {
+      "ip": "192.168.124.178",
+      "mac": "5A:4D:3:E5:65:F7"
     }
   ]
 }
