--- a/config.json
+++ b/config.json
@@ -153,6 +153,21 @@
         6,
         7
       ]
+    },
+    {
+      "filter_host": "youtube.com",
+      "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/pcs\\/activeview.+&ad_cpn=",
+      "filter_start_time": "00:00",
+      "filter_end_time": "23:59",
+      "filter_weekday": [
+        1,
+        2,
+        3,
+        4,
+        5,
+        6,
+        7
+      ]
     }
   ],
   "proxy_port": 8001,
