--- a/config.json
+++ b/config.json
@@ -125,38 +125,8 @@
       ]
     },
     {
-      "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/\\s.youtube.com/api/stats/qoe?.*adformat=",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "s.youtube.com",
-      "filter_match_rule": "^https?:\\/\\/s\\.youtube\\.com\\/api\\/stats\\/atr.+&is_ad=1",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/pcs\\/activeview.+&ad_cpn=",
+      "filter_host": "googlevideo.com",
+      "filter_match_rule": "^https?:\\/\\/[\\w-]+\\.googlevideo\\.com\\/initplayback.+&oad",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
       "filter_weekday": [
@@ -293,6 +263,122 @@
     {
       "ip": "192.168.124.149",
       "mac": "14:C0:50:14:6E:A5"
+    },
+    {
+      "ip": "30.240.102.1",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.2",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.3",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.4",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.5",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.6",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.7",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.8",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.9",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.10",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.11",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.12",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.13",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.14",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.15",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.16",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.17",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.18",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.63",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.75",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.140",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.147",
+      "mac": "FA:EB:D8:27:64:53"
+    },
+    {
+      "ip": "30.240.102.24",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.29",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.36",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.198",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.216",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.20",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.23",
+      "mac": "0:0:0:0:4:0"
     }
   ]
 }
