--- a/config.json
+++ b/config.json
@@ -66,67 +66,7 @@
     },
     {
       "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/api\\/stats\\/ads",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "youtube.com",
       "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/(pagead|ptracking)",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/s\\.youtube\\.com\\/api\\/stats\\/qoe\\?adcontext",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "googlevideo.com",
-      "filter_match_rule": "^https?:\\/\\/[\\w-]+\\.googlevideo\\.com\\/(?!(dclk_video_ads|videoplayback\\?)).+(&oad|ctier)",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "googlevideo.com",
-      "filter_match_rule": "^https?:\\/\\/[\\w-]+\\.googlevideo\\.com\\/initplayback.+&oad",
       "filter_start_time": "00:00",
       "filter_end_time": "23:59",
       "filter_weekday": [
@@ -378,6 +318,198 @@
     },
     {
       "ip": "30.240.102.23",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.43",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.21",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.22",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.25",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.26",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.27",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.28",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.30",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.31",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.32",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.35",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.37",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.38",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.39",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.40",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.41",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.19",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.33",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.34",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.42",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.45",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.46",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.47",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.48",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.49",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.50",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.51",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.52",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.53",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.54",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.44",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.55",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.56",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.57",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.58",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.59",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.60",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.61",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.62",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.64",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.65",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.66",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.67",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.68",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.69",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.84",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.87",
+      "mac": "0:0:0:0:4:0"
+    },
+    {
+      "ip": "30.240.102.89",
       "mac": "0:0:0:0:4:0"
     }
   ]
