--- a/config.json
+++ b/config.json
@@ -123,51 +123,6 @@
         6,
         7
       ]
-    },
-    {
-      "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/\\s.youtube.com/api/stats/qoe?.*adformat=",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "s.youtube.com",
-      "filter_match_rule": "^https?:\\/\\/s\\.youtube\\.com\\/api\\/stats\\/atr.+&is_ad=1",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
-    },
-    {
-      "filter_host": "youtube.com",
-      "filter_match_rule": "^https?:\\/\\/(www|s)\\.youtube\\.com\\/pcs\\/activeview.+&ad_cpn=",
-      "filter_start_time": "00:00",
-      "filter_end_time": "23:59",
-      "filter_weekday": [
-        1,
-        2,
-        3,
-        4,
-        5,
-        6,
-        7
-      ]
     }
   ],
   "proxy_port": 8001,
@@ -293,6 +248,10 @@
     {
       "ip": "192.168.124.149",
       "mac": "14:C0:50:14:6E:A5"
+    },
+    {
+      "ip": "192.168.124.251",
+      "mac": "6E:FB:18:4D:9C:3E"
     }
   ]
 }
