--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
         6,
         7
       ],
-      "filter_mac": "7A:25:CF:6B:59:E0"
+      "filter_mac": "6E:FB:18:4D:9C:3E"
     },
     {
       "filter_host": "doubao.com",
@@ -30,7 +30,7 @@
         6,
         7
       ],
-      "filter_mac": "7A:25:CF:6B:59:E0"
+      "filter_mac": "6E:FB:18:4D:9C:3E"
     },
     {
       "filter_host": "dburl.net",
@@ -46,7 +46,7 @@
         6,
         7
       ],
-      "filter_mac": "7A:25:CF:6B:59:E0"
+      "filter_mac": "6E:FB:18:4D:9C:3E"
     },
     {
       "filter_host": "baidu.com",
@@ -62,7 +62,7 @@
         6,
         7
       ],
-      "filter_mac": "7A:25:CF:6B:59:E0"
+      "filter_mac": "6E:FB:18:4D:9C:3E"
     },
     {
       "filter_host": "youtube.com",
